# qobs

./: CMakeLists.txt  README.md
src/: builder.cpp  builder.hpp  config.cpp  config.hpp  dependency.cpp  dependency.hpp  depgraph.cpp  depgraph.hpp  main.cpp  manifest.cpp  manifest.hpp  utils.cpp  utils.hpp
src/generators/: generator.hpp
src/generators/ninja/: ninja_gen.cpp  ninja_gen.hpp
tests/: run_all_tests.sh  test_app_with_local_lib.sh  test_app_with_sim_fetched_lib.sh  test_basic_app.sh  test_static_lib.sh  test_transitive_deps.sh
